wrote expressauth validator
