# Microservices/AuthService/src/auth/controller.ts
@@ -2,10 +2,12 @@ import {
   Body,
   Controller,
   Post,
+  Security,
   Response,
   Route,
+  Get,
 } from 'tsoa'
-import { Authenticated, Credentials } from '.'
+import { Authenticated, Credentials, User } from '.'
 import { AuthService } from './service'
 
 
@@ -17,15 +19,33 @@ export class AuthController extends Controller {
   public async login(
     @Body() credentials: Credentials,
   ): Promise<Authenticated | undefined> {
-    const authenticatedUser = await new AuthService().login(credentials);
-    if (!authenticatedUser) {
-      this.setStatus(401);
+    try {
+      const authenticatedUser = await new AuthService().login(credentials);
+      if (!authenticatedUser) {
+        this.setStatus(401);
+        return;
+      }
+      return authenticatedUser;
+    } catch (error) {
+      console.log(process.env.MASTER_SECRET);
+      console.log(process.env.POSTGRES_PASSWORD);
+      console.error('Error during authcontroller:', error);
+      this.setStatus(500);
       return;
-
     }
-    return authenticatedUser;
   }
+  @Get('userInfo')
+  @Security("jwt")
+  @Response('401', 'Unauthorised')
+  public async getUserInfo(
+  ): Promise<User | undefined> {
+    try {
+      return undefined
 
+    } catch {
+      return undefined;
+    }
+  }
 
 
 
